fix megadownloader to not hang on too much output into stdout/stderr buffer