@@ -4,19 +4,27 @@ import com.github.a2435191.download_musical_scores.downloaders.AbstractFileDownl
 import com.github.a2435191.download_musical_scores.filetree.AbstractFileNode;
 import org.jetbrains.annotations.NotNull;
 
+import java.io.BufferedReader;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.nio.file.Path;
 import java.util.Collection;
+import java.util.HashSet;
+import java.util.Objects;
+import java.util.Set;
+import java.util.concurrent.TimeUnit;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 // TODO: make sure https://mega.nz/cmd is installed with mega-help command test
 
 public final class MegaDownloader extends AbstractFileDownloader {
+    // FIXME: downloading a folder with multiple files hangs
 
     private static final Pattern DOWNLOAD_PATH_REGEX = Pattern.compile("^Download finished: (.+)$");
+    private static final long PROCESS_WAIT_MILLIS = 500;
     private final @NotNull Path pathToMegaCommands;
+
 
     public MegaDownloader() {
         this.pathToMegaCommands = Path.of("mega-get");
@@ -29,17 +37,31 @@ public final class MegaDownloader extends AbstractFileDownloader {
     private static @NotNull Path getDownloadPathFromOutputText(@NotNull Collection<@NotNull String> outputLines) {
         String stringPath = outputLines
             .stream()
-            .filter(DOWNLOAD_PATH_REGEX.asMatchPredicate())
             .map(s -> {
                 Matcher m = DOWNLOAD_PATH_REGEX.matcher(s);
-                m.matches();
-                return m.group(1);
+                if (m.matches()) {
+                    return m.group(1);
+                }
+                return null;
             })
+            .filter(Objects::nonNull)
             .findFirst()
             .orElseThrow(() -> new RuntimeException(
                 "No line of output " + String.join("\n", outputLines) + " matches regex " + DOWNLOAD_PATH_REGEX + "!")
             );
         return Path.of(stringPath);
+    }
+
+    private static void readerToLinesBuffer(@NotNull BufferedReader reader, @NotNull Collection<String> original) {
+        try {
+            while (reader.ready()) {
+                String line = reader.readLine();
+                original.add(line);
+            }
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
@@ -58,24 +80,34 @@ public final class MegaDownloader extends AbstractFileDownloader {
                         pathToMegaCommands.toString(), url, parentDir.toString()
                     };
                 }
-                Process p = Runtime.getRuntime().exec(command);
+                Process p = new ProcessBuilder(command)
+                    .redirectErrorStream(true)
+                    .start();
 
-                final int status;
-                try {
-                    status = p.waitFor();
-                } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                    throw new RuntimeException("thread interrupted!", e);
-                }
+                Set<String> outLines = new HashSet<>();
+                BufferedReader outReader = new BufferedReader(new InputStreamReader(p.getInputStream()));
+
+                boolean isDone;
+                do {
+                    isDone = true;
+                    try {
+                        isDone = p.waitFor(PROCESS_WAIT_MILLIS, TimeUnit.MILLISECONDS);
+                        readerToLinesBuffer(outReader, outLines);
+                    } catch (InterruptedException e) {
+                        Thread.currentThread().interrupt();
+                    }
+                } while (!isDone);
+
+                int status = p.exitValue();
 
                 if (status != 0) {
-                    String errorMessage = p.errorReader().lines().collect(Collectors.joining("\n"));
+                    String errorMessage = String.join("\n", outLines);
                     throw new IOException(String.format("Non-zero status code %d while running %s:\n%s",
                         status, String.join(" ", command), errorMessage)
                     );
                 }
 
-                return getDownloadPathFromOutputText(p.inputReader().lines().toList());
+                return getDownloadPathFromOutputText(outLines);
             }
         };
     }
